--- a/src/partials/skills.html
+++ b/src/partials/skills.html
@@ -5,7 +5,7 @@
          <li  class="skill-item">
              <div class="third-container">
             <svg class="icon-second-skill">
-                <use href="../images/symbol-defs.svg#icon-House-bookshelves-bro-1"></use>
+                <use href="./images/symbol-defs.svg#icon-House-bookshelves-bro-1"></use>
             </svg>
             <h3 class="chapter-skill">Reading</h3>
             <p class="text-skill">Perception and response actions of the user
@@ -18,7 +18,7 @@
           <li class="skill-item">
               <div class="second-container">
              <svg class="icon-second-skill">
-                 <use href="../images/symbol-defs.svg#icon-Typewriter-bro-1"></use>
+                 <use href="./images/symbol-defs.svg#icon-Typewriter-bro-1"></use>
              </svg>
              <h3 class="chapter-skill">Writing</h3>
              <p class="text-skill">One of the most important and extensive 
@@ -30,7 +30,7 @@
              <li>
                  <div class="skill-container">
                 <svg class="icon-skill">
-                    <use href="../images/symbol-defs.svg#icon-Shared-goals-bro-1"></use>
+                    <use href="./images/symbol-defs.svg#icon-Shared-goals-bro-1"></use>
                 </svg>
                 <h3 class="chapter-skill">Speaking</h3>
                 <p class="text-skill">Improve your English skills and confidence. 
@@ -53,7 +53,7 @@
                  <button type="button" class="skill-button second">Learn more</button>
                 
                  <svg class="icon-last-skill">
-                     <use href="../images/symbol-defs.svg#icon-Podcast-audience-bro-1"></use>
+                     <use href="./images/symbol-defs.svg#icon-Podcast-audience-bro-1"></use>
                  </svg>
                  </div>
           </li>
